--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/globals.css" />
-    <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="stylesheet" href="./src/css/main.css">
     <script src="./src/js/app.js" defer></script>
 
 </head>
