--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
-    <script src="./src/js/app.js" defer></script>
-    <script src="./src/js/gallery.js" defer></script>
+    <script src="./src/js/pdfViewer.js" defer></script>
+    <script type="module" src="/src/js/gallery.js" defer></script>
 
 
 </head>
@@ -31,7 +31,7 @@
     </nav>
 
     <!-- Section 1: Hero -->
-    <section id="hero" class="section hero-section">
+    <section id="hero" class="section hero-section bg">
         <div class="hero-content">
             <h1 class="hero-title">PROSPECT 24</h1>
             <p class="hero-subtitle">ԱՆՇԱՐԺ ԳՈՒՅՔԻ ԶԱՐԳԱՑՄԱՆ ՆԱԽԱԳԾԵՐԻ ԻՐԱԿԱՆԱՑՈՒՄ</p>
@@ -39,21 +39,23 @@
     </section>
 
     <!-- Section 2: Components -->
-    <div class="component-display" id="components">
+    <section class="section component-display" id="components">
+
         <div class="header-block">
             <h2 class="section-title">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
         </div>
-        <p class="location-text">Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք</p>
 
+        <p class="location-text">
+            Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք
+        </p>
+
+        <!-- MAIN IMAGE -->
         <div class="component-image-wrapper">
-            <img id="mainPlanImg" src="https://picsum.photos/id/1031/1200/700?grayscale" alt="Architectural Plan"
-                class="main-plan-img" loading="lazy" />
 
+            <img id="mainPlanImg" class="main-plan-img" src="/src/images/full/1.webp" alt="Architectural Plan" />
 
             <button class="main-arrow prev" aria-label="Previous image">‹</button>
             <button class="main-arrow next" aria-label="Next image">›</button>
-
-
 
             <div class="image-caption">
                 <div class="doc-row">
@@ -61,9 +63,8 @@
                         <span>Էսքիզային առաջադրանք</span>
                     </button>
 
-                    <a class="doc-download" href="files/9 ՃՀԱ էսքիզ.pdf" download onclick="event.stopPropagation()"
-                        aria-label="Скачать PDF">
-                        <svg class="download-ico" viewBox="0 0 24 24" aria-hidden="true">
+                    <a class="doc-download" href="files/9 ՃՀԱ էսքիզ.pdf" download onclick="event.stopPropagation()">
+                        <svg class="download-ico" viewBox="0 0 24 24">
                             <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none" stroke="currentColor"
                                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
@@ -72,73 +73,46 @@
             </div>
         </div>
 
-        <!-- THUMBNAILS GALLERY -->
+        <!-- THUMBNAILS (SWIPER) -->
         <div class="gallery-wrapper">
 
-            <button class="gallery-arrow prev" aria-label="Previous"><svg width="169px" height="169px"
-                    viewBox="-19.04 0 75.804 75.804" xmlns="http://www.w3.org/2000/svg" fill="#d1d1d1" stroke="#d1d1d1"
-                    transform="matrix(-1, 0, 0, 1, 0, 0)">
-                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g id="SVGRepo_iconCarrier">
-                        <g id="Group_65" data-name="Group 65" transform="translate(-831.568 -384.448)">
-                            <path id="Path_57" data-name="Path 57"
-                                d="M833.068,460.252a1.5,1.5,0,0,1-1.061-2.561l33.557-33.56a2.53,2.53,0,0,0,0-3.564l-33.557-33.558a1.5,1.5,0,0,1,2.122-2.121l33.556,33.558a5.53,5.53,0,0,1,0,7.807l-33.557,33.56A1.5,1.5,0,0,1,833.068,460.252Z"
-                                fill="#d1d1d1"></path>
-                        </g>
-                    </g>
-                </svg></button>
+            <button class="gallery-arrow prev" aria-label="Previous">‹</button>
 
-            <div class="gallery-strip" id="galleryStrip">
-                <div class="gallery-track">
+            <div class="gallery-strip swiper">
+                <div class="gallery-track swiper-wrapper">
 
-                    <img class="thumb is-active" src="https://picsum.photos/id/1048/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1048/1200/700?grayscale" alt="Modern Building 1"
-                        aria-selected="true" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb is-active" src="/src/images/thumbs/2.webp"
+                            data-full="/src/images/full/2.webp" />
+                    </div>
 
-                    <img class="thumb" src="https://picsum.photos/id/1057/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1057/1200/700?grayscale" alt="Modern Building 2"
-                        aria-selected="false" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb" src="/src/images/thumbs/3.webp" data-full="/src/images/full/3.webp" />
+                    </div>
 
-                    <img class="thumb" src="https://picsum.photos/id/1068/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1068/1200/700?grayscale" alt="Modern Building 3"
-                        aria-selected="false" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb" src="/src/images/thumbs/4.webp" data-full="/src/images/full/4.webp" />
+                    </div>
 
-                    <img class="thumb" src="https://picsum.photos/id/1071/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1071/1200/700?grayscale" alt="Modern Building 4"
-                        aria-selected="false" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb" src="/src/images/thumbs/5.webp" data-full="/src/images/full/5.webp" />
+                    </div>
 
-                    <img class="thumb" src="https://picsum.photos/id/1031/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1031/1200/700?grayscale" alt="Modern Building 5"
-                        aria-selected="false" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb" src="/src/images/thumbs/6.webp" data-full="/src/images/full/6.webp" />
+                    </div>
 
-                    <img class="thumb" src="https://picsum.photos/id/1043/300/300?grayscale"
-                        data-full="https://picsum.photos/id/1043/1200/700?grayscale" alt="Modern Building 6"
-                        aria-selected="false" loading="lazy" />
+                    <div class="swiper-slide">
+                        <img class="thumb" src="/src/images/thumbs/7.webp" data-full="/src/images/full/7.webp" />
+                    </div>
 
                 </div>
             </div>
 
-            <button class="gallery-arrow next" aria-label="Next"><svg width="169px" height="169px"
-                    viewBox="-19.04 0 75.804 75.804" xmlns="http://www.w3.org/2000/svg" fill="#d1d1d1" stroke="#d1d1d1"
-                    transform="matrix(1, 0, 0, 1, 0, 0)">
-                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g id="SVGRepo_iconCarrier">
-                        <g id="Group_65" data-name="Group 65" transform="translate(-831.568 -384.448)">
-                            <path id="Path_57" data-name="Path 57"
-                                d="M833.068,460.252a1.5,1.5,0,0,1-1.061-2.561l33.557-33.56a2.53,2.53,0,0,0,0-3.564l-33.557-33.558a1.5,1.5,0,0,1,2.122-2.121l33.556,33.558a5.53,5.53,0,0,1,0,7.807l-33.557,33.56A1.5,1.5,0,0,1,833.068,460.252Z"
-                                fill="#d1d1d1"></path>
-                        </g>
-                    </g>
-                </svg></button>
+            <button class="gallery-arrow next" aria-label="Next">›</button>
 
         </div>
-
-
-
-
-    </div>
+    </section>
 
 
     <!-- Section 3: Details & Documents -->
@@ -146,10 +120,7 @@
         <div class="container split-view">
             <div class="text-content">
                 <p>ՄԱՐԶ ԼՈՌԻ, ՀԱՄԱՅՆՔ ՎԱՆԱՁՈՐ ՎԱՆԱՁՈՐ Ք. ԲԱՆԱԿԻ ՓՈՂՈՑ</p>
-                <div class="download-btns">
-                    <a href="files/10 տեղեկատվություն.docx" download class="btn-download-alt">Ներբեռնել տեղեկատվությունը
-                        (.docx)</a>
-                </div>
+
                 <div class="content-block">
                     <p>1․ Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8-4 հիվանդանոցային համալիր մասնաշենքը առկա
                         է ենթակայան, որը վերազինվելու է և սպասարկելու է Բանակի փողոց 8/11 հասցեի գույքերին։</p>
@@ -168,6 +139,10 @@
                         <li>Թենիսի կորտ 18.0x30.5 մ, պարիսպի h=1.8մ, երկարությունը՝ 876մ,</li>
                         <li>Ստորգետնյա ավտոկայանատեղի 212 մեքենայի համար՝ 8030մ2։</li>
                     </ul>
+                </div>
+                <div class="download-btns">
+                    <a href="files/10 տեղեկատվություն.pdf" download class="btn-download-alt">Ներբեռնել տեղեկատվությունը
+                        (.pdf)</a>
                 </div>
             </div>
 
@@ -398,10 +373,10 @@
             </div>
 
     </section>
-    </div>
+
 
     <!-- Section 4: Valuation -->
-    <section id="valuation" class="section dark-bg">
+    <section id="valuation" class="section  ">
         <div class="container text-center">
             <h2 class="section-title gold">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԳՆԱՀԱՏՈՒՄ</h2>
             <div class="price-box">
